[tool.poetry]
name = "maply"
version = "0.1.0"
description = "Place scatterplot on a map and let users see where people are from."
authors = ["DLCHAMP <36091350+dlchamp@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
shapely = "^2.0.2"
geopandas = "^0.14.1"
disnake = "^2.9.1"
sqlalchemy = "^2.0.24"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
isort = "^5.13.2"
black = "^23.12.1"
pre-commit = "^3.6.0"
pyright = "^1.1.343"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
disnake = "^2.9.1"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff.isort]
combine-as-imports = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
exclude = [
    "./migrate.py",
    "./alembic/"
]

[tool.ruff]
line-length = 100
select = [
    "E",
    "F",
    "W",
    "I",
    "D",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "FBT",
    "B",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "ISC",
    "G",
    "PIE",
    "T20",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TCH",
    "ARG",
    "PGH",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "RUF",
]
ignore = [
    "ANN101",
    "D100",
    "D101",
    "D104",
    "PGH003",
    "G004",
    "I001", # let isort handle imports
    "TRY003",
    "EM101",
    "B008",
    "PLR2004",
]
exclude = [
    "csvbot/log.py",
    "alembic/*",
    "migrate.py"
]



[tool.ruff.pydocstyle]
convention = "numpy"
